# optica

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  class_default_value_tag.html  class_short_name_tag.html  classoptica_1_1_token_iterator.html  classoptica_1_1_tokenizer.html  conceptoptica_1_1_arity.html  conceptoptica_1_1_bind_property_type.html  conceptoptica_1_1_default_value_property_type.html  conceptoptica_1_1_has_bind_property_type.html  conceptoptica_1_1_has_default_value_property_type.html  conceptoptica_1_1_has_matching_default_value_type.html  conceptoptica_1_1_has_matching_variant_property_type.html  conceptoptica_1_1_has_name_property_type.html  conceptoptica_1_1_has_required_peoperty_type.html  conceptoptica_1_1_has_short_name_property_type.html  conceptoptica_1_1_has_value_property_type.html  conceptoptica_1_1_has_variant_property_type.html  conceptoptica_1_1_is_arity_property.html  conceptoptica_1_1_is_numeric_arity.html  conceptoptica_1_1_is_typed_arity.html  conceptoptica_1_1_matching_default_and_value_types.html  conceptoptica_1_1_matching_variant_and_value_types.html  conceptoptica_1_1_name_property_type.html  conceptoptica_1_1_option_type.html  conceptoptica_1_1_property.html  conceptoptica_1_1_required_property_type.html  conceptoptica_1_1_short_name_property_type.html  conceptoptica_1_1_unique_properties.html  conceptoptica_1_1_valid_order_expression.html  conceptoptica_1_1_valid_property_expression.html  conceptoptica_1_1_value_property_type.html  conceptoptica_1_1_variant_property_type.html  concepts.html  files.html  index.html  (+26 more)
.github/workflows/: clang-format.yaml  gh-pages  gh-pages.yaml  tests.yml
0.1.0/: annotated.html  class_default_value_tag.html  class_short_name_tag.html  classoptica_1_1_token_iterator.html  classoptica_1_1_tokenizer.html  conceptoptica_1_1_bind_property_type.html  conceptoptica_1_1_default_value_property_type.html  conceptoptica_1_1_has_bind_property_type.html  conceptoptica_1_1_has_default_value_property_type.html  conceptoptica_1_1_has_matching_default_value_type.html  conceptoptica_1_1_has_matching_variant_property_type.html  conceptoptica_1_1_has_name_property_type.html  conceptoptica_1_1_has_required_peoperty_type.html  conceptoptica_1_1_has_short_name_property_type.html  conceptoptica_1_1_has_value_property_type.html  conceptoptica_1_1_has_variant_property_type.html  conceptoptica_1_1_matching_default_and_value_types.html  conceptoptica_1_1_matching_variant_and_value_types.html  conceptoptica_1_1_name_property_type.html  conceptoptica_1_1_option_type.html  conceptoptica_1_1_property.html  conceptoptica_1_1_required_property_type.html  conceptoptica_1_1_short_name_property_type.html  conceptoptica_1_1_unique_properties.html  conceptoptica_1_1_valid_order_expression.html  conceptoptica_1_1_valid_property_expression.html  conceptoptica_1_1_value_property_type.html  conceptoptica_1_1_variant_property_type.html  concepts.html  files.html  index.html  modules.html  namespaceoptica.html  namespaces.html  optica.tagfile.xml  pages.html  searchdata-v2.js  structoptica_1_1_base_property.html  structoptica_1_1_bind_property.html  structoptica_1_1_bind_property_tag.html  (+13 more)
cmake/: clang-format.cmake  deps.cmake
docs/: poxy.toml
examples/: CMakeLists.txt  test.cpp  test2.cpp
include/optica/: optica.hpp
include/optica/impl/: fixed_string.hpp  option.hpp  option_builder.hpp  parser.hpp  program_option.hpp  program_option_builder.hpp  properties.hpp  token.hpp  type_parsers.hpp  utils.hpp
mod/: optica.cppm
tests/: CMakeLists.txt  custom_holding_type.cpp  custom_type.cpp  multiply_option.cpp  one_option.cpp  positional_args.cpp  single_option.cpp
